--- a/index.html
+++ b/index.html
@@ -5,71 +5,89 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Student Feedback Form</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; background: #f0ebf8; }
-    .form-page { display: none; }
+    body { font-family: 'Inter', sans-serif; }
+    .form-page { display: none; transition: all 0.3s ease; }
     .active-page { display: block; }
-    .gform-card { background: white; border-radius: 8px; border: 1px solid #dadce0; padding: 24px; margin-bottom: 20px; }
-    .gform-header { background: #673ab7; color: white; padding: 20px; border-radius: 8px 8px 0 0; }
-    .btn-primary { background: #673ab7; color: white; padding: 8px 20px; border-radius: 4px; font-weight: 500; }
-    .btn-primary:hover { background: #5a2ea6; }
-    .btn-secondary { background: #e0e0e0; padding: 8px 20px; border-radius: 4px; }
-    .btn-secondary:hover { background: #d5d5d5; }
+    .card { background: #fff; border-radius: 0.75rem; box-shadow: 0 4px 12px rgba(0,0,0,0.05); padding: 2rem; margin-bottom: 2rem; }
+    .btn-primary { background-color: #2563eb; color: #fff; padding: 0.6rem 1.5rem; border-radius: 0.5rem; font-weight: 600; transition: all 0.2s; }
+    .btn-primary:hover { background-color: #1e40af; }
+    .btn-secondary { background-color: #6b7280; color: #fff; padding: 0.6rem 1.5rem; border-radius: 0.5rem; font-weight: 600; }
+    .btn-secondary:hover { background-color: #4b5563; }
   </style>
 </head>
-<body>
+<body class="bg-gray-100 text-gray-800">
 
-  <div class="gform-header text-center">
-    <h1 class="text-2xl font-bold">THE INSTITUTE OF CHARTERED ACCOUNTANTS OF INDIA</h1>
+  <!-- Header -->
+  <div class="text-center py-6 bg-blue-900 text-white shadow-lg">
+    <h1 class="text-2xl font-bold uppercase">THE INSTITUTE OF CHARTERED ACCOUNTANTS OF INDIA</h1>
     <p class="text-lg mt-1">Student Feedback Form</p>
   </div>
 
-  <div class="max-w-3xl mx-auto p-6">
+  <div class="max-w-3xl mx-auto mt-6 bg-white p-8 rounded-2xl shadow-lg">
 
-    <div id="page1" class="form-page active-page gform-card">
-      <h2 class="text-xl font-semibold mb-4">Basic Information</h2>
-      <label class="block mb-2">Student Name *</label>
-      <input id="studentName" type="text" class="w-full p-2 border rounded mb-4">
-      <label class="block mb-2">Registration Number *</label>
-      <input id="regNumber" type="text" class="w-full p-2 border rounded mb-4">
-      <label class="block mb-2">Email *</label>
-      <input id="email" type="email" class="w-full p-2 border rounded mb-4">
-      <label class="block mb-2">Mobile Number *</label>
-      <input id="mobile" type="tel" class="w-full p-2 border rounded mb-4">
-      <div class="flex justify-end">
-        <button type="button" class="btn-primary" onclick="validatePage1()">Next</button>
+    <!-- Page 1: Basic Info -->
+    <div id="page1" class="form-page active-page card">
+      <h2 class="text-2xl font-semibold mb-4 text-blue-700">Basic Information</h2>
+      <p class="text-gray-500 mb-6">Please fill in your details to proceed with feedback.</p>
+
+      <label class="block mb-2 font-medium">Student Name <span class="text-red-500">*</span></label>
+      <input id="studentName" type="text" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your full name">
+
+      <label class="block mb-2 font-medium">Registration Number <span class="text-red-500">*</span></label>
+      <input id="regNumber" type="text" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="e.g. CRO1234567">
+
+      <label class="block mb-2 font-medium">Email <span class="text-red-500">*</span></label>
+      <input id="email" type="email" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="example@email.com">
+
+      <label class="block mb-2 font-medium">Mobile Number <span class="text-red-500">*</span></label>
+      <input id="mobile" type="tel" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="10 digit number">
+
+      <div class="flex justify-end mt-6">
+        <button type="button" class="btn-primary" onclick="validatePage1()">Next →</button>
       </div>
     </div>  
 
-    <div id="page2" class="form-page gform-card">
-      <h2 class="text-xl font-semibold mb-4">Select Faculty</h2>
+    <!-- Page 2: Faculty Selection -->
+    <div id="page2" class="form-page card">
+      <h2 class="text-2xl font-semibold mb-4 text-blue-700">Select Faculty</h2>
       <select id="facultySelect" class="w-full p-2 border rounded mb-6"></select>
-      <div class="flex justify-between">
-        <button type="button" class="btn-secondary" onclick="showPage(1)">Back</button>
-        <button type="button" class="btn-primary" onclick="validatePage2()">Next</button>
+
+      <div class="flex justify-between mt-6">
+        <button type="button" class="btn-secondary" onclick="showPage(1)">← Back</button>
+        <button type="button" class="btn-primary" onclick="validatePage2()">Next →</button>
       </div>
     </div>
 
-    <div id="page3" class="form-page gform-card">
-      <h2 class="text-xl font-semibold mb-4">Faculty Feedback</h2>
-      <label class="block mb-2">Batch ID *</label>
+    <!-- Page 3: Feedback -->
+    <div id="page3" class="form-page card">
+      <h2 class="text-2xl font-semibold mb-4 text-blue-700">Faculty Feedback</h2>
+
+      <label class="block mb-2">Batch ID <span class="text-red-500">*</span></label>
       <input id="batchId" type="text" class="w-full p-2 border rounded mb-4">
+
       <div id="questionsContainer"></div>
-      <label class="block mt-4 mb-2">Quiz Marks *</label>
+
+      <label class="block mt-4 mb-2">Quiz Marks <span class="text-red-500">*</span></label>
       <input id="quizMarks" type="number" min="0" max="100" class="w-full p-2 border rounded mb-4" oninput="calculateScore()">
+
       <div class="p-4 bg-gray-50 rounded border mt-4">
         <p><b>Weightage Score:</b> <span id="weightageScore">0.00</span></p>
         <p><b>Grade:</b> <span id="grade">-</span></p>
       </div>
+
       <div class="flex justify-between mt-6">
-        <button type="button" class="btn-secondary" onclick="showPage(2)">Back</button>
-        <button id="submitBtn" type="button" class="btn-primary" onclick="validateFeedback()">Submit</button>
+        <button type="button" class="btn-secondary" onclick="showPage(2)">← Back</button>
+        <button id="submitBtn" type="button" class="btn-primary" onclick="validateFeedback()">✅ Submit Feedback</button>
       </div>
     </div>
 
   </div>
 
 <script>
+/* ======= Cleaned JS for multi-page form (no nested <script> tags) ======= */
+
 const faculties = ["Sandeep Agarwal","Bhanu Dhir","Shekhar Sharma","Anju Gupta","Preeti Goel","Rohit Agarwal","Sunita Rathore"];
 let completedFaculties = [];
 const questions = [
@@ -78,7 +96,10 @@ const questions = [
   "Analytical Thinking","Creativity & Innovation","Professional Ethics Awareness","Emotional Intelligence","Overall Engagement"
 ];
 
+let currentPage = 1;
+
 function showPage(n) {
+  currentPage = n;
   document.querySelectorAll(".form-page").forEach(p => p.style.display = "none");
   document.getElementById("page"+n).style.display = "block";
   if(n===2) loadFaculties();
@@ -90,24 +111,138 @@ function validatePage1(){
   const regNumber = document.getElementById("regNumber").value.trim();
   const email = document.getElementById("email").value.trim();
   const mobile = document.getElementById("mobile").value.trim();
-  if(!studentName || !regNumber || !email || !mobile){ alert("⚠️ Please fill all fields"); return; }
+
+  if(!studentName || !regNumber || !email || !mobile){
+    alert("⚠️ Please fill all fields");
+    return;
+  }
+
+  const regPattern = /^(CRO|NRO|FRO|SRO|ERO|WRO)\d{7}$/i;
+  if(!regPattern.test(regNumber)){
+    alert("⚠️ Invalid Registration Number format!");
+    return;
+  }
+
+  if(!/^[6-9]\d{9}$/.test(mobile)){
+    alert("⚠️ Invalid mobile number!");
+    return;
+  }
+
+  if(!email.includes("@") || !email.includes(".")){
+    alert("⚠️ Invalid email address!");
+    return;
+  }
+
+  // ✅ Only move if all checks pass
   showPage(2);  
 }
 
 function validatePage2() {
   const faculty = document.getElementById("facultySelect").value;
-  if(!faculty){ alert("⚠️ Please select a faculty!"); return; }
+  if(!faculty){ 
+    alert("⚠️ Please select a faculty!"); 
+    return; 
+  }
   showPage(3);
+}
+
+async function validateFeedback() {
+  const submitBtn = document.getElementById("submitBtn"); 
+  const batchId = document.getElementById("batchId").value.trim();
+  const quizMarks = document.getElementById("quizMarks").value.trim();
+
+  // --- Validation ---
+  if (!batchId || quizMarks === "") {
+    alert("⚠️ Fill Batch ID & Quiz Marks");
+    return;
+  }
+
+  const unanswered = [];
+  questions.forEach((q, i) => {
+    if (!document.getElementById("q" + i)?.value) unanswered.push(i + 1);
+  });
+
+  if (unanswered.length > 0) {
+    alert("⚠️ Answer all questions. Missing Qs: " + unanswered.join(","));
+    return;
+  }
+
+  const faculty = document.getElementById("facultySelect").value;
+
+  const payload = {
+    timestamp: new Date().toISOString(),
+    studentName: document.getElementById("studentName").value.trim(),
+    regNumber: document.getElementById("regNumber").value.trim(),
+    email: document.getElementById("email").value.trim(),
+    mobile: document.getElementById("mobile").value.trim(),
+    faculty,
+    batchId,
+    quizMarks: Number(quizMarks),
+    weightage: parseFloat(document.getElementById("weightageScore").innerText),
+    grade: document.getElementById("grade").innerText,
+    answers: questions.map((q, i) => document.getElementById("q" + i).value)
+  };
+
+  try {
+    // --- Disable button & show loading ---
+    if (submitBtn) {
+      submitBtn.disabled = true;
+      submitBtn.innerText = "Submitting... ⏳";
+    }
+
+    const response = await fetch(
+      "https://script.google.com/macros/s/AKfycbwFoCXaitd0DO6obxsE8s4PSEMwD_9c6Zc2c7ol-y55LoOjpH2BOtk_qMdUlLcNE9np/exec",
+      { method: "POST", body: JSON.stringify(payload) }
+    );
+
+    const res = await response.json();
+
+    if (res.status === "success") {
+      completedFaculties.push(faculty);
+      alert("✅ Feedback submitted for " + faculty);
+      resetFeedbackForm();
+
+      if (completedFaculties.length < faculties.length) {
+        loadFaculties();
+        showPage(2);
+      } else {
+        document.querySelectorAll(".form-page").forEach(p => p.style.display = "none");
+        const container = document.querySelector(".max-w-3xl");
+        const done = document.createElement("div");
+        done.innerHTML = `<h2 class="text-2xl font-bold mb-4">Thank you!</h2><p>All feedback submitted.</p>`;
+        container.appendChild(done);
+      }
+    } else {
+      alert("⚠️ Error saving data. Try again.");
+    }
+  } catch (err) {
+    console.error(err);
+    alert("⚠️ Connection error. Data not saved.");
+  } finally {
+    // --- Always restore button ---
+    if (submitBtn) {
+      submitBtn.disabled = false;
+      submitBtn.innerText = "✅ Submit Feedback";
+    }
+  }
 }
 
 function loadFaculties(){
   const select = document.getElementById("facultySelect");
   select.innerHTML = `<option value="">-- Select Faculty --</option>`;
-  faculties.filter(f=>!completedFaculties.includes(f)).forEach(f=>{
-    const opt = document.createElement("option");
-    opt.value=f; opt.textContent=f;
-    select.appendChild(opt);
-  });
+  const available = faculties.filter(f=>!completedFaculties.includes(f));
+  if(available.length===0){
+    select.innerHTML=`<option value="">No faculties left</option>`;
+    select.disabled=true;
+  }else{
+    available.forEach(f=>{
+      const opt = document.createElement("option");
+      opt.value = f;
+      opt.textContent = f;
+      select.appendChild(opt);
+    });
+    select.disabled=false;
+  }
 }
 
 function loadQuestions(){
@@ -115,7 +250,7 @@ function loadQuestions(){
   container.innerHTML = "";
   questions.forEach((q,i)=>{
     container.innerHTML += `<div class="mb-4">
-      <label class="block mb-1">${q} *</label>
+      <label class="block mb-1">${q} <span class="text-red-500">*</span></label>
       <select id="q${i}" class="w-full p-2 border rounded" onchange="calculateScore()">
         <option value="">--Select--</option>
         <option value="20">1. POOR</option>
@@ -126,17 +261,19 @@ function loadQuestions(){
       </select>
     </div>`;
   });
+  document.getElementById("weightageScore").innerText="0.00";
+  document.getElementById("grade").innerText="-";
 }
 
 function calculateScore(){
   let total=0,count=0;
   questions.forEach((q,i)=>{
-    const val=parseInt(document.getElementById("q"+i)?.value||0,10);
+    const val = parseInt(document.getElementById("q"+i)?.value||0,10);
     if(val){ total+=val; count++; }
   });
   const avg = count>0 ? total/count : 0;
-  const quiz=parseFloat(document.getElementById("quizMarks")?.value||0);
-  const weightage=(avg+quiz)/2;
+  const quiz = parseFloat(document.getElementById("quizMarks")?.value||0);
+  const weightage = (avg+quiz)/2;
   document.getElementById("weightageScore").innerText=weightage.toFixed(2);
 
   let grade="C";
@@ -147,71 +284,6 @@ function calculateScore(){
   document.getElementById("grade").innerText=grade;
 }
 
-async function validateFeedback(){
-  const submitBtn=document.getElementById("submitBtn");
-  const batchId=document.getElementById("batchId").value.trim();
-  const quizMarks=document.getElementById("quizMarks").value.trim();
-
-  if(!batchId || quizMarks===""){ alert("⚠️ Fill Batch ID & Quiz Marks"); return; }
-
-  const unanswered=[];
-  questions.forEach((q,i)=>{ if(!document.getElementById("q"+i)?.value) unanswered.push(i+1); });
-  if(unanswered.length>0){ alert("⚠️ Answer all questions. Missing Qs: "+unanswered.join(",")); return; }
-
-  const studentName=document.getElementById("studentName").value.trim();
-  const regNumber=document.getElementById("regNumber").value.trim();
-  const email=document.getElementById("email").value.trim();
-  const mobile=document.getElementById("mobile").value.trim();
-  const faculty=document.getElementById("facultySelect").value;
-
-  // collect answers and calculate weighted score
-  const answers={};
-  let totalScore=0;
-  questions.forEach((q,i)=>{
-    const val=parseInt(document.getElementById("q"+i).value,10);
-    answers[q]=val;
-    totalScore+=val;
-  });
-  const avgQuestions=totalScore/questions.length;
-  const quiz=parseFloat(quizMarks);
-  const weightedScore=(avgQuestions+quiz)/2;
-
-  // grade
-  let grade="C";
-  if(weightedScore>=85) grade="A+";
-  else if(weightedScore>=70) grade="A";
-  else if(weightedScore>=50) grade="B+";
-  else if(weightedScore>=30) grade="B";
-
-  const payload={studentName, regNumber, email, mobile, faculty, batchId, answers, quizMarks:quiz, weightedScore, grade};
-
-  try{
-    submitBtn.disabled=true; submitBtn.innerText="Submitting...";
-    await fetch("https://script.google.com/macros/s/AKfycbwFoCXaitd0DO6obxsE8s4PSEMwD_9c6Zc2c7ol-y55LoOjpH2BOtk_qMdUlLcNE9np/exec", { method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify(payload) });
-
-    completedFaculties.push(faculty);
-    alert("✅ Feedback submitted for "+faculty);
-    resetFeedbackForm();
-
-    if(completedFaculties.length<faculties.length){
-      loadFaculties(); showPage(2);
-    }else{
-      document.querySelectorAll(".form-page").forEach(p=>p.style.display="none");
-      const container=document.querySelector(".max-w-3xl");
-      const done=document.createElement("div");
-      done.className="gform-card";
-      done.innerHTML=`<h2 class="text-2xl font-bold mb-4">Thank you!</h2><p>All feedback submitted.</p>`;
-      container.appendChild(done);
-    }
-
-    submitBtn.disabled=false; submitBtn.innerText="Submit";
-
-  }catch(err){
-    alert("⚠️ Error saving data: "+err);
-    submitBtn.disabled=false; submitBtn.innerText="Submit";
-  }
-}
-
 function resetFeedbackForm(){
   document.getElementById("batchId").value="";
   document.getElementById("quizMarks").value="";
@@ -219,8 +291,12 @@ function resetFeedbackForm(){
   document.getElementById("grade").innerText="-";
   document.querySelectorAll("#questionsContainer select").forEach(s=>{ s.value=""; });
 }
-</script>
 
+/* Initialize after DOM ready */
+document.addEventListener('DOMContentLoaded', () => {
+  showPage(1);
+  // (faculties/questions are loaded automatically when you land on their pages)
+});
+</script>
 </body>
 </html>
-
