--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <input id="studentName" type="text" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your full name">
 
       <label class="block mb-2 font-medium">Registration Number <span class="text-red-500">*</span></label>
-      <input id="regNumber" type="text" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="e.g. CRO1234567">
+      <input id="regNumber" type="text" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="e.g. N/C/E/W/S/FRO1234567">
 
       <label class="block mb-2 font-medium">Email <span class="text-red-500">*</span></label>
       <input id="email" type="email" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="example@email.com">
@@ -300,3 +300,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
