--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ function validatePage1(){
 
   const regPattern = /^(CRO|NRO|FRO|SRO|ERO|WRO)\d{7}$/i;
   if(!regPattern.test(regNumber)){
-    alert("⚠️ Invalid Registration Number format!");
+    alert("⚠️ Invalid Registration Number format! (CRO|NRO|FRO|SRO|ERO|WRO01234567");
     return;
   }
 
@@ -300,4 +300,5 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
