--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       <label class="block mb-2 font-medium">Mobile Number <span class="text-red-500">*</span></label>
       <input id="mobile" type="tel" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="10 digit number">
 
+      <label class="block mb-2 font-medium">select Faculty<span class="text-red-500">*</span></label>
+      <input id="studentName" type="text" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Faculty Name">
+ 
+
       <div class="flex justify-end mt-6">
         <button type="button" class="btn-primary" onclick="validatePage1()">Next →</button>
       </div>
@@ -300,6 +304,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
