--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <label class="block mb-2 font-medium">Mobile Number <span class="text-red-500">*</span></label>
       <input id="mobile" type="tel" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="10 digit number">
 
-      <label class="block mb-2 font-medium">select Faculty<span class="text-red-500">*</span></label>
+      <label class="block mb-2 font-medium">Select Faculty<span class="text-red-500">*</span></label>
       <input id="studentName" type="text" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Faculty Name">
  
 
@@ -306,6 +306,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
