--- a/index.html
+++ b/index.html
@@ -42,11 +42,7 @@
       <input id="email" type="email" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="example@email.com">
 
       <label class="block mb-2 font-medium">Mobile Number <span class="text-red-500">*</span></label>
-      <input id="mobile" type="tel" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="10 digit number">
-
-      <label class="block mb-2 font-medium">Select Faculty<span class="text-red-500">*</span></label>
-      <input id="studentName" type="text" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Faculty Name">
- 
+      <input id="mobile" type="tel" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="10 digit number"> 
 
       <div class="flex justify-end mt-6">
         <button type="button" class="btn-primary" onclick="validatePage1()">Next →</button>
@@ -115,9 +111,8 @@ function validatePage1(){
   const regNumber = document.getElementById("regNumber").value.trim();
   const email = document.getElementById("email").value.trim();
   const mobile = document.getElementById("mobile").value.trim();
-  const SelectFaculty = document.getElementById("SelectFaculty").value.trim();
-
-  if(!studentName || !regNumber || !email || !mobile || !SelectFaculty){
+  
+  if(!studentName || !regNumber || !email || !mobile){
     alert("⚠️ Please fill all fields");
     return;
   }
@@ -180,7 +175,6 @@ async function validateFeedback() {
     regNumber: document.getElementById("regNumber").value.trim(),
     email: document.getElementById("email").value.trim(),
     mobile: document.getElementById("mobile").value.trim(),
-    SelectFaculty: document.getElementById("SelectFaculty").value.trim(),    
     faculty,
     batchId,
     quizMarks: Number(quizMarks),
@@ -306,6 +300,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
