--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 const faculties = ["Sandeep Agarwal","Bhanu Dhir","Shekhar Sharma","Anju Gupta","Preeti Goel","Rohit Agarwal","Sunita Rathore"];
 let completedFaculties = [];
 const questions = [
-  "Attendance & Punctuality","Professional Dress Code","Discipline & Conduct","Active Participation",
+  "Attendance & Punctuality","Professional Dress Code","Discipline","Active Participation",
   "Group Activities & Teamwork","Presentation - Content","Presentation - Delivery","Communication Skills",
   "Analytical Thinking","Creativity & Innovation","Professional Ethics Awareness","Emotional Intelligence","Overall Engagement"
 ];
@@ -300,6 +300,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
