--- a/index.html
+++ b/index.html
@@ -146,87 +146,7 @@ function validatePage2() {
   showPage(3);
 }
 
-async function validateFeedback() {
-  const submitBtn = document.getElementById("submitBtn"); 
-  const batchId = document.getElementById("batchId").value.trim();
-  const quizMarks = document.getElementById("quizMarks").value.trim();
-
-  // --- Validation ---
-  if (!batchId || quizMarks === "") {
-    alert("⚠️ Fill Batch ID & Quiz Marks");
-    return;
-  }
-
-  const unanswered = [];
-  questions.forEach((q, i) => {
-    if (!document.getElementById("q" + i)?.value) unanswered.push(i + 1);
-  });
-
-  if (unanswered.length > 0) {
-    alert("⚠️ Answer all questions. Missing Qs: " + unanswered.join(","));
-    return;
-  }
-
-  const faculty = document.getElementById("facultySelect").value;
-
-  const payload = {
-    timestamp: new Date().toISOString(),
-    studentName: document.getElementById("studentName").value.trim(),
-    regNumber: document.getElementById("regNumber").value.trim(),
-    email: document.getElementById("email").value.trim(),
-    mobile: document.getElementById("mobile").value.trim(),
-    faculty,
-    batchId,
-    quizMarks: Number(quizMarks),
-    weightage: parseFloat(document.getElementById("weightageScore").innerText),
-    grade: document.getElementById("grade").innerText,
-    answers: questions.map((q, i) => document.getElementById("q" + i).value)
-  };
-
-  try {
-    // --- Disable button & show loading ---
-    if (submitBtn) {
-      submitBtn.disabled = true;
-      submitBtn.innerText = "Submitting... ⏳";
-    }
-
-    const response = await fetch(
-      "https://script.google.com/macros/s/AKfycbwFoCXaitd0DO6obxsE8s4PSEMwD_9c6Zc2c7ol-y55LoOjpH2BOtk_qMdUlLcNE9np/exec",
-      { method: "POST", body: JSON.stringify(payload) }
-    );
-
-    const res = await response.json();
-
-    if (res.status === "success") {
-      completedFaculties.push(faculty);
-      alert("✅ Feedback submitted for " + faculty);
-      resetFeedbackForm();
-
-      if (completedFaculties.length < faculties.length) {
-        loadFaculties();
-        showPage(2);
-      } else {
-        document.querySelectorAll(".form-page").forEach(p => p.style.display = "none");
-        const container = document.querySelector(".max-w-3xl");
-        const done = document.createElement("div");
-        done.innerHTML = `<h2 class="text-2xl font-bold mb-4">Thank you!</h2><p>All feedback submitted.</p>`;
-        container.appendChild(done);
-      }
-    } else {
-      alert("⚠️ Error saving data. Try again.");
-    }
-  } catch (err) {
-    console.error(err);
-    alert("⚠️ Connection error. Data not saved.");
-  } finally {
-    // --- Always restore button ---
-    if (submitBtn) {
-      submitBtn.disabled = false;
-      submitBtn.innerText = "✅ Submit Feedback";
-    }
-  }
-}
-
+validateFeedback
 function loadFaculties(){
   const select = document.getElementById("facultySelect");
   select.innerHTML = `<option value="">-- Select Faculty --</option>`;
@@ -349,3 +269,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
