--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ let completedFaculties = [];
 const questions = [
   "Attendance & Punctuality","Discipline","Active Participation",
   "Group Activities & Teamwork","Presentation - Content","Presentation - Delivery","Communication Skills",
-  "Analytical Thinking","Creativity & Innovation","Professional Ethics Awareness","Emotional Intelligence","Overall Engagement","Professional Dress Code"
+  "Analytical Thinking","Creativity & Innovation","Professional Ethics Awareness","Emotional Intelligence","Overall Engagement","Professional Dress Code",
+      "Industry/ Practice real life examples","Accessibility for clarification","Personalised guidance","Inspiring / motivating"
 ];
 
 let currentPage = 1;
@@ -269,4 +270,5 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
